# inkschedule-3

./: LICENSE  README.md  eslint.config.mjs  index.html  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.mts  vite.config.ts
src/: App.tsx  Loading.tsx  Navbar.tsx  index.tsx  schedule.ts  styles.css  tabs.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/entries/: AnarchyEntry.tsx  BigRunEntry.tsx  ChallengeEntry.tsx  EggstraEntry.tsx  EntryList.tsx  FestEntry.tsx  RegularEntry.tsx  SalmonEntry.tsx  TimeLabel.tsx  TriColorEntry.tsx  XEntry.tsx  modes.ts  stage.ts
