[package]
name = "inkschedule-3"
version = "0.7.4"
authors = ["SharpMars"]
license = "MIT"
repository = "https://github.com/SharpMars/inkschedule-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [
    "shell-open",
    "updater",
    "system-tray",
    "devtools",
] }
tauri-plugin-positioner = { version = "1.0.5", features = ["system-tray"] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = {version = "0.61.1", features = ["Win32_Graphics_Gdi"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
